// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`FormButtons > should adjust offset if input is focused in lg 1`] = `
<DocumentFragment>
  <div>
    <input
      data-testid="input"
    />
    <div
      class="css-145pihz"
    >
      buttons
    </div>
  </div>
</DocumentFragment>
`;

exports[`FormButtons > should adjust offset if input is focused in md 1`] = `
<DocumentFragment>
  <div>
    <input
      data-testid="input"
    />
    <div
      class="css-145pihz"
    >
      buttons
    </div>
  </div>
</DocumentFragment>
`;

exports[`FormButtons > should adjust offset if input is focused in sm 1`] = `
<DocumentFragment>
  <div>
    <input
      data-testid="input"
    />
    <div
      class="css-j6ajdm"
    >
      buttons
    </div>
  </div>
</DocumentFragment>
`;

exports[`FormButtons > should adjust offset if input is focused in xl 1`] = `
<DocumentFragment>
  <div>
    <input
      data-testid="input"
    />
    <div
      class="css-145pihz"
    >
      buttons
    </div>
  </div>
</DocumentFragment>
`;

exports[`FormButtons > should adjust offset if input is focused in xs 1`] = `
<DocumentFragment>
  <div>
    <input
      data-testid="input"
    />
    <div
      class="css-j6ajdm"
    >
      buttons
    </div>
  </div>
</DocumentFragment>
`;

exports[`FormButtons > should render in lg 1`] = `
<DocumentFragment>
  <div
    class="css-145pihz"
  >
    button
  </div>
</DocumentFragment>
`;

exports[`FormButtons > should render in md 1`] = `
<DocumentFragment>
  <div
    class="css-145pihz"
  >
    button
  </div>
</DocumentFragment>
`;

exports[`FormButtons > should render in sm 1`] = `
<DocumentFragment>
  <div
    class="css-145pihz"
  >
    button
  </div>
</DocumentFragment>
`;

exports[`FormButtons > should render in xl 1`] = `
<DocumentFragment>
  <div
    class="css-145pihz"
  >
    button
  </div>
</DocumentFragment>
`;

exports[`FormButtons > should render in xs 1`] = `
<DocumentFragment>
  <div
    class="css-145pihz"
  >
    button
  </div>
</DocumentFragment>
`;
